// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Many-to-many with conflict resolution generates correct schema 1`] = `
"type Post {
  id: ID!
  title: String!
  editors(editorID: ModelIDKeyConditionInput, filter: ModelPostEditorFilterInput, sortDirection: ModelSortDirection, limit: Int, nextToken: String): ModelPostEditorConnection
  _version: Int!
  _deleted: Boolean
  _lastChangedAt: AWSTimestamp!
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type PostEditor {
  id: ID!
  postID: ID!
  editorID: ID!
  post: Post!
  editor: User!
  _version: Int!
  _deleted: Boolean
  _lastChangedAt: AWSTimestamp!
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type User {
  id: ID!
  username: String!
  posts(postID: ModelIDKeyConditionInput, filter: ModelPostEditorFilterInput, sortDirection: ModelSortDirection, limit: Int, nextToken: String): ModelPostEditorConnection
  _version: Int!
  _deleted: Boolean
  _lastChangedAt: AWSTimestamp!
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

enum ModelSortDirection {
  ASC
  DESC
}

type ModelPostConnection {
  items: [Post]
  nextToken: String
  startedAt: AWSTimestamp
}

input ModelStringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  contains: String
  notContains: String
  between: [String]
  beginsWith: String
  attributeExists: Boolean
  attributeType: ModelAttributeTypes
  size: ModelSizeInput
}

input ModelIDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  contains: ID
  notContains: ID
  between: [ID]
  beginsWith: ID
  attributeExists: Boolean
  attributeType: ModelAttributeTypes
  size: ModelSizeInput
}

input ModelIntInput {
  ne: Int
  eq: Int
  le: Int
  lt: Int
  ge: Int
  gt: Int
  between: [Int]
  attributeExists: Boolean
  attributeType: ModelAttributeTypes
}

input ModelFloatInput {
  ne: Float
  eq: Float
  le: Float
  lt: Float
  ge: Float
  gt: Float
  between: [Float]
  attributeExists: Boolean
  attributeType: ModelAttributeTypes
}

input ModelBooleanInput {
  ne: Boolean
  eq: Boolean
  attributeExists: Boolean
  attributeType: ModelAttributeTypes
}

input ModelSizeInput {
  ne: Int
  eq: Int
  le: Int
  lt: Int
  ge: Int
  gt: Int
  between: [Int]
}

input ModelPostFilterInput {
  id: ModelIDInput
  title: ModelStringInput
  and: [ModelPostFilterInput]
  or: [ModelPostFilterInput]
  not: ModelPostFilterInput
}

enum ModelAttributeTypes {
  binary
  binarySet
  bool
  list
  map
  number
  numberSet
  string
  stringSet
  _null
}

type Query {
  syncPosts(filter: ModelPostFilterInput, limit: Int, nextToken: String, lastSync: AWSTimestamp): ModelPostConnection
  getPost(id: ID!): Post
  listPosts(filter: ModelPostFilterInput, limit: Int, nextToken: String): ModelPostConnection
  syncPostEditors(filter: ModelPostEditorFilterInput, limit: Int, nextToken: String, lastSync: AWSTimestamp): ModelPostEditorConnection
  syncUsers(filter: ModelUserFilterInput, limit: Int, nextToken: String, lastSync: AWSTimestamp): ModelUserConnection
  getUser(id: ID!): User
  listUsers(filter: ModelUserFilterInput, limit: Int, nextToken: String): ModelUserConnection
}

input CreatePostInput {
  id: ID
  title: String!
  _version: Int
}

input UpdatePostInput {
  id: ID!
  title: String
  _version: Int
}

input DeletePostInput {
  id: ID
  _version: Int
}

type Mutation {
  createPost(input: CreatePostInput!, condition: ModelPostConditionInput): Post
  updatePost(input: UpdatePostInput!, condition: ModelPostConditionInput): Post
  deletePost(input: DeletePostInput!, condition: ModelPostConditionInput): Post
  createPostEditor(input: CreatePostEditorInput!, condition: ModelPostEditorConditionInput): PostEditor
  updatePostEditor(input: UpdatePostEditorInput!, condition: ModelPostEditorConditionInput): PostEditor
  deletePostEditor(input: DeletePostEditorInput!, condition: ModelPostEditorConditionInput): PostEditor
  createUser(input: CreateUserInput!, condition: ModelUserConditionInput): User
  updateUser(input: UpdateUserInput!, condition: ModelUserConditionInput): User
  deleteUser(input: DeleteUserInput!, condition: ModelUserConditionInput): User
}

input ModelPostConditionInput {
  title: ModelStringInput
  and: [ModelPostConditionInput]
  or: [ModelPostConditionInput]
  not: ModelPostConditionInput
}

type Subscription {
  onCreatePost: Post @aws_subscribe(mutations: [\\"createPost\\"])
  onUpdatePost: Post @aws_subscribe(mutations: [\\"updatePost\\"])
  onDeletePost: Post @aws_subscribe(mutations: [\\"deletePost\\"])
  onCreatePostEditor: PostEditor @aws_subscribe(mutations: [\\"createPostEditor\\"])
  onUpdatePostEditor: PostEditor @aws_subscribe(mutations: [\\"updatePostEditor\\"])
  onDeletePostEditor: PostEditor @aws_subscribe(mutations: [\\"deletePostEditor\\"])
  onCreateUser: User @aws_subscribe(mutations: [\\"createUser\\"])
  onUpdateUser: User @aws_subscribe(mutations: [\\"updateUser\\"])
  onDeleteUser: User @aws_subscribe(mutations: [\\"deleteUser\\"])
}

type ModelPostEditorConnection {
  items: [PostEditor]
  nextToken: String
  startedAt: AWSTimestamp
}

input ModelPostEditorFilterInput {
  id: ModelIDInput
  postID: ModelIDInput
  editorID: ModelIDInput
  and: [ModelPostEditorFilterInput]
  or: [ModelPostEditorFilterInput]
  not: ModelPostEditorFilterInput
}

input CreatePostEditorInput {
  id: ID
  postID: ID!
  editorID: ID!
  _version: Int
}

input UpdatePostEditorInput {
  id: ID!
  postID: ID
  editorID: ID
  _version: Int
}

input DeletePostEditorInput {
  id: ID
  _version: Int
}

input ModelPostEditorConditionInput {
  postID: ModelIDInput
  editorID: ModelIDInput
  and: [ModelPostEditorConditionInput]
  or: [ModelPostEditorConditionInput]
  not: ModelPostEditorConditionInput
}

type ModelUserConnection {
  items: [User]
  nextToken: String
  startedAt: AWSTimestamp
}

input ModelUserFilterInput {
  id: ModelIDInput
  username: ModelStringInput
  and: [ModelUserFilterInput]
  or: [ModelUserFilterInput]
  not: ModelUserFilterInput
}

input CreateUserInput {
  id: ID
  username: String!
  _version: Int
}

input UpdateUserInput {
  id: ID!
  username: String
  _version: Int
}

input DeleteUserInput {
  id: ID
  _version: Int
}

input ModelUserConditionInput {
  username: ModelStringInput
  and: [ModelUserConditionInput]
  or: [ModelUserConditionInput]
  not: ModelUserConditionInput
}

input ModelIDKeyConditionInput {
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  between: [ID]
  beginsWith: ID
}
"
`;

exports[`Many-to-many without conflict resolution generates correct schema 1`] = `
"type Post {
  id: ID!
  title: String!
  editors(editorID: ModelIDKeyConditionInput, filter: ModelPostEditorFilterInput, sortDirection: ModelSortDirection, limit: Int, nextToken: String): ModelPostEditorConnection
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type PostEditor {
  id: ID!
  postID: ID!
  editorID: ID!
  post: Post!
  editor: User!
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type User {
  id: ID!
  username: String!
  posts(postID: ModelIDKeyConditionInput, filter: ModelPostEditorFilterInput, sortDirection: ModelSortDirection, limit: Int, nextToken: String): ModelPostEditorConnection
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

enum ModelSortDirection {
  ASC
  DESC
}

type ModelPostConnection {
  items: [Post]
  nextToken: String
}

input ModelStringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  contains: String
  notContains: String
  between: [String]
  beginsWith: String
  attributeExists: Boolean
  attributeType: ModelAttributeTypes
  size: ModelSizeInput
}

input ModelIDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  contains: ID
  notContains: ID
  between: [ID]
  beginsWith: ID
  attributeExists: Boolean
  attributeType: ModelAttributeTypes
  size: ModelSizeInput
}

input ModelIntInput {
  ne: Int
  eq: Int
  le: Int
  lt: Int
  ge: Int
  gt: Int
  between: [Int]
  attributeExists: Boolean
  attributeType: ModelAttributeTypes
}

input ModelFloatInput {
  ne: Float
  eq: Float
  le: Float
  lt: Float
  ge: Float
  gt: Float
  between: [Float]
  attributeExists: Boolean
  attributeType: ModelAttributeTypes
}

input ModelBooleanInput {
  ne: Boolean
  eq: Boolean
  attributeExists: Boolean
  attributeType: ModelAttributeTypes
}

input ModelSizeInput {
  ne: Int
  eq: Int
  le: Int
  lt: Int
  ge: Int
  gt: Int
  between: [Int]
}

input ModelPostFilterInput {
  id: ModelIDInput
  title: ModelStringInput
  and: [ModelPostFilterInput]
  or: [ModelPostFilterInput]
  not: ModelPostFilterInput
}

enum ModelAttributeTypes {
  binary
  binarySet
  bool
  list
  map
  number
  numberSet
  string
  stringSet
  _null
}

type Query {
  getPost(id: ID!): Post
  listPosts(filter: ModelPostFilterInput, limit: Int, nextToken: String): ModelPostConnection
  getUser(id: ID!): User
  listUsers(filter: ModelUserFilterInput, limit: Int, nextToken: String): ModelUserConnection
}

input CreatePostInput {
  id: ID
  title: String!
}

input UpdatePostInput {
  id: ID!
  title: String
}

input DeletePostInput {
  id: ID
}

type Mutation {
  createPost(input: CreatePostInput!, condition: ModelPostConditionInput): Post
  updatePost(input: UpdatePostInput!, condition: ModelPostConditionInput): Post
  deletePost(input: DeletePostInput!, condition: ModelPostConditionInput): Post
  createPostEditor(input: CreatePostEditorInput!, condition: ModelPostEditorConditionInput): PostEditor
  updatePostEditor(input: UpdatePostEditorInput!, condition: ModelPostEditorConditionInput): PostEditor
  deletePostEditor(input: DeletePostEditorInput!, condition: ModelPostEditorConditionInput): PostEditor
  createUser(input: CreateUserInput!, condition: ModelUserConditionInput): User
  updateUser(input: UpdateUserInput!, condition: ModelUserConditionInput): User
  deleteUser(input: DeleteUserInput!, condition: ModelUserConditionInput): User
}

input ModelPostConditionInput {
  title: ModelStringInput
  and: [ModelPostConditionInput]
  or: [ModelPostConditionInput]
  not: ModelPostConditionInput
}

type Subscription {
  onCreatePost: Post @aws_subscribe(mutations: [\\"createPost\\"])
  onUpdatePost: Post @aws_subscribe(mutations: [\\"updatePost\\"])
  onDeletePost: Post @aws_subscribe(mutations: [\\"deletePost\\"])
  onCreatePostEditor: PostEditor @aws_subscribe(mutations: [\\"createPostEditor\\"])
  onUpdatePostEditor: PostEditor @aws_subscribe(mutations: [\\"updatePostEditor\\"])
  onDeletePostEditor: PostEditor @aws_subscribe(mutations: [\\"deletePostEditor\\"])
  onCreateUser: User @aws_subscribe(mutations: [\\"createUser\\"])
  onUpdateUser: User @aws_subscribe(mutations: [\\"updateUser\\"])
  onDeleteUser: User @aws_subscribe(mutations: [\\"deleteUser\\"])
}

input CreatePostEditorInput {
  id: ID
  postID: ID!
  editorID: ID!
}

input UpdatePostEditorInput {
  id: ID!
  postID: ID
  editorID: ID
}

input DeletePostEditorInput {
  id: ID
}

input ModelPostEditorConditionInput {
  postID: ModelIDInput
  editorID: ModelIDInput
  and: [ModelPostEditorConditionInput]
  or: [ModelPostEditorConditionInput]
  not: ModelPostEditorConditionInput
}

type ModelUserConnection {
  items: [User]
  nextToken: String
}

input ModelUserFilterInput {
  id: ModelIDInput
  username: ModelStringInput
  and: [ModelUserFilterInput]
  or: [ModelUserFilterInput]
  not: ModelUserFilterInput
}

input CreateUserInput {
  id: ID
  username: String!
}

input UpdateUserInput {
  id: ID!
  username: String
}

input DeleteUserInput {
  id: ID
}

input ModelUserConditionInput {
  username: ModelStringInput
  and: [ModelUserConditionInput]
  or: [ModelUserConditionInput]
  not: ModelUserConditionInput
}

input ModelIDKeyConditionInput {
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  between: [ID]
  beginsWith: ID
}

type ModelPostEditorConnection {
  items: [PostEditor]
  nextToken: String
}

input ModelPostEditorFilterInput {
  id: ModelIDInput
  postID: ModelIDInput
  editorID: ModelIDInput
  and: [ModelPostEditorFilterInput]
  or: [ModelPostEditorFilterInput]
  not: ModelPostEditorFilterInput
}
"
`;
